--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ Flask
 Flask-Cors
 Flask-SocketIO
 Flask-SQLAlchemy
-eventlet
-gunicorn
+eventlet==0.33.3
+gunicorn==20.1.0
 python-dotenv
 psycopg2-binary
 gspread
